make java 21 optional (fixes #199)